# pyaesni

./: .travis.yml  CMakeLists.txt  pyaesni.c  setup.py
.github/workflows/: build_and_deploy.yaml
examples/: ige_example.py
tests/: test_ige_cryptg.py
